fix: font too light, we change to higher weight

--- a/src/assets/default.css
+++ b/src/assets/default.css
@@ -33,14 +33,50 @@
   font-weight: 700;
   src: url("/fonts/nunito-v26-latin-700italic.woff2") format("woff2");
 }
-
-* {
-  box-sizing: border-box;
+/* nunito-500 - latin */
+@font-face {
+  font-display: swap;
   font-family: "Nunito";
-  line-height: 1.2;
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/nunito-v26-latin-500.woff2") format("woff2");
 }
 
+/* nunito-500italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Nunito";
+  font-style: italic;
+  font-weight: 500;
+  src: url("/fonts/nunito-v26-latin-500italic.woff2") format("woff2");
+}
+* {
+  box-sizing: border-box;
+  font-family:
+    "Nunito",
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  line-height: 1.3;
+}
+
+p {
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: #222;
+}
 a {
   color: #005577;
   text-decoration-thickness: 2px;
+}
+strong {
+  color: #000;
 }
